@@ -1,27 +1,29 @@
 package com.devteria.gateway.configuration;
 
-import com.devteria.gateway.dto.ApiResponse;
+import com.devteria.gateway.dto.response.ApiResponse;
 import com.devteria.gateway.service.IdentityService;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
-import io.netty.handler.codec.http.HttpResponseStatus;
 import lombok.AccessLevel;
 import lombok.RequiredArgsConstructor;
 import lombok.experimental.FieldDefaults;
+import lombok.experimental.NonFinal;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.cloud.gateway.filter.GatewayFilterChain;
 import org.springframework.cloud.gateway.filter.GlobalFilter;
 import org.springframework.core.Ordered;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
+import org.springframework.http.server.reactive.ServerHttpRequest;
 import org.springframework.http.server.reactive.ServerHttpResponse;
 import org.springframework.stereotype.Component;
 import org.springframework.util.CollectionUtils;
 import org.springframework.web.server.ServerWebExchange;
 import reactor.core.publisher.Mono;
-import reactor.netty.http.server.HttpServerResponse;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Component
@@ -31,17 +33,26 @@ import java.util.List;
 public class AuthenticationFilter implements GlobalFilter, Ordered {
     IdentityService identityService;
     ObjectMapper objectMapper;
+    @NonFinal
+    private String[] publicEndPoint = {"/identity/auth/.*", "/identity/users/registration"};
+
+    @Value("${app.api-prefix}")
+    @NonFinal
+    private String appPrefix;
 
     @Override
     public Mono<Void> filter(ServerWebExchange exchange, GatewayFilterChain chain) {
         log.info("Enter authentication filter....");
+        if (isPublicEndPoint(exchange.getRequest())) {
+            return  chain.filter(exchange);
+        }
 
         // Get token from authorization header
         List<String> authHeader = exchange.getRequest().getHeaders().get(HttpHeaders.AUTHORIZATION);
         if (CollectionUtils.isEmpty(authHeader))
             return unauthenticated(exchange.getResponse());
 
-        String token = authHeader.getFirst().replace("Bearer ", "");
+        String token = authHeader.get(0).replace("Bearer ", "");
         log.info("Token: {}", token);
 
         return identityService.introspect(token).flatMap(introspectResponse -> {
@@ -55,6 +66,10 @@ public class AuthenticationFilter implements GlobalFilter, Ordered {
     @Override
     public int getOrder() {
         return -1;
+    }
+    private boolean isPublicEndPoint(ServerHttpRequest request) {
+        return Arrays.stream(publicEndPoint)
+                .anyMatch(s -> request.getURI().getPath().matches(appPrefix + s));
     }
 
     Mono<Void> unauthenticated(ServerHttpResponse response){
